--- a/index.html
+++ b/index.html
@@ -41,18 +41,22 @@
         </div>
         <p>
           <a href="#cart-button" class="cart-button"
-            ><img src="./images/icon-cart.svg" class="cart-icon" /> Add to
-            Cart</a
+            ><img
+              src="./images/icon-cart.svg"
+              class="cart-icon"
+              alt="cart-icon"
+            />
+            Add to Cart</a
           >
         </p>
       </div>
     </main>
 
-    <div class="attribution">
+    <footer class="attribution" role="contentinfo">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Mardiya07</a>.
-    </div>
+    </footer>
   </body>
 </html>
