--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img
           src="/images/image-product-mobile.jpg"
           class="hero-img"
-          alt="hero"
+          alt="hero image"
         />
       </div>
       <div class="text-wrapper">
